--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,11 @@ security.user.name=admin
 security.user.password=admin
 spring.session.store-type=none
 catalina.base=/home/travis/
-#logging.file=/opt/tomcat/logs/csye6225.log
-#http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#common-application-properties
-#search multipart
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
-
 # Naming strategy
-#spring.profiles.active: test
-#spring.profiles.active:dev
+aws.AWS_ACCESS_KEY_ID=random
+aws.AWS_SERECT_ACCESS_KEY=random
+aws.S3_BUCKET_NAME=random
+aws.AWS_REGION=random
 #spring.profiles.active:aws
-
-aws.AWS_ACCESS_KEY_ID=dumb
-aws.AWS_SECRET_ACCESS_KEY=dumb
