--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Created by .ignore support plugin (hsz.mobi)
 .gradle
 /build/
 
@@ -6,7 +7,7 @@
 .iml
  out
 gen
-.gitignore
+#.gitignore
 .idea/inspectionProfiles/
 build/reports/
  build/tmp/compileJava/
@@ -39,4 +40,4 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-
+src/test/resources/
