--- a/appspec.yml
+++ b/appspec.yml
@@ -8,9 +8,20 @@ files:
     destination: /home/ubuntu
   - source: ./build/libs/ROOT.war
     destination: /opt/tomcat/webapps
+  - source: ./infrastructure/aws/cloudwatch/awslogs.conf
+    destination: /home/ubuntu
+  - source: ./startCloudWatch.sh
+    destination: /home/ubuntu
+
+permissions:
+  - object: /home/ubuntu/startCloudWatch.sh
+    mode: 777
 
 hooks:
   AfterInstall:
    - location: ./restartTomcat.sh
+     timeout: 180
+     runas: ubuntu
+   - location: ./startCloudWatch.sh
      timeout: 180
      runas: ubuntu
