--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,23 +1,6 @@
 ################## DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
-spring.datasource.username=rootq3
-spring.datasource.password=password12
+cloud.aws.stack.auto=false
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
-spring.datasource.username=willbereplaced
-spring.datasource.password=anyjunktooverwrite
-cloud.aws.stack.auto=false
-#spring.datasource.name=access_key
-#spring.datasource.passworddummypassword
-aws.AWS_ACCESS_KEY_ID=dumb
-aws.AWS_SECRET_ACCESS_KEY=dumb
-#jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
-#spring.datasource.region=alele
-
-#jsa.s3.uploadfile=/home/ritesh/U.txt
-##jsa.s3.key=jsa-s3-upload-file.txt
-
-
-
-cloud.aws.stack.auto=false
+spring.datasource.url=random
+spring.datasource.username=random
+spring.datasource.password=random
