--- a/build.gradle
+++ b/build.gradle
@@ -38,11 +38,29 @@ idea {
     }
 }
 
+
+dependencies {
+    compile(
+            'com.amazonaws:aws-lambda-java-core:+',
+            'com.amazonaws:aws-lambda-java-events:+'
+    )
+}
+
 test {
     testLogging {
         events "passed", "skipped", "failed", "standardOut", "standardError"
     }
 }
+
+//task buildZip(type: Zip) {
+//    from compileJava
+//    from processResources
+//    into('lib') {
+//        from configurations.runtime
+//    }
+//}
+
+//build.dependsOn buildZip
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -58,7 +76,7 @@ dependencies {
     compile('com.google.code.gson:gson:+')
     compile('commons-fileupload:commons-fileupload:1.3.1')
 
-   // compile ('com.amazonaws:aws-java-sdk:+')
+    // compile ('com.amazonaws:aws-java-sdk:+')
 // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
     compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.218'
 
@@ -66,6 +84,17 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-aws-autoconfigure:1.0.0.RELEASE')
     //compile group: 'org.springframework.cloud', name: 'spring-cloud-aws-jdbc', version: '1.0.0.RELEASE'
 
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.226'
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.11.226'
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.11.226'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.226'
+    //compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.9.16'
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core
+    //compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.1.0'
+// https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-events
+    //compile group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '2.0.1'
 
     //compile ('com.google.cloud:google-cloud:+')
 
