--- a/build.gradle
+++ b/build.gradle
@@ -52,15 +52,6 @@ test {
     }
 }
 
-//task buildZip(type: Zip) {
-//    from compileJava
-//    from processResources
-//    into('lib') {
-//        from configurations.runtime
-//    }
-//}
-
-//build.dependsOn buildZip
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -76,7 +67,7 @@ dependencies {
     compile('com.google.code.gson:gson:+')
     compile('commons-fileupload:commons-fileupload:1.3.1')
 
-    // compile ('com.amazonaws:aws-java-sdk:+')
+    compile ('com.amazonaws:aws-java-sdk:+')
 // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
     compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.218'
 
@@ -106,7 +97,7 @@ dependencies {
     testCompile('io.rest-assured:rest-assured:3.0.3')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
-    //testCompile("junit:junit:4.11")
+
 }
 
 war {
