--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -78,6 +78,9 @@ Parameters:
   SubnetId2:
     Description: Subnet Id for us-east-1b
     Type: "String"
+  SubnetId3:
+    Description: Subnet Id for us-east-1d
+    Type: "String"
   DynamodbTableName:
     Description: Name of the Dynamodb
     Type: "String"
@@ -135,6 +138,12 @@ Parameters:
   IAMSecretKey:
     Description: Name of the active stack that has roles created
     Type: "String"
+  LoadBalancerName:
+    Description: Load balancer name
+    Type: "String"
+  mySSLarn:
+    Description: Arn generated after issuing SSL Certificate from ACM
+    Type: "String"
 
 Resources:
 # VPC Security Group for EC2 instance
@@ -163,6 +172,7 @@ Resources:
           FromPort: '8080'
           ToPort: '8080'
           CidrIp: 0.0.0.0/0
+
 
 
 # VPC Security Group for RDS instance
@@ -212,7 +222,7 @@ Resources:
           Key: "Name"
           Value: "RDS MySQL Database"
 
-  EC2Instance:
+  EC2Instance1:
     Type: 'AWS::EC2::Instance'
     Properties:
       KeyName: !Ref KeyName
@@ -369,6 +379,273 @@ Resources:
             systemctl start awslogs.service
             systemctl stop awslogs.service
 
+  EC2Instance2:
+    Type: 'AWS::EC2::Instance'
+    Properties:
+      KeyName: !Ref KeyName
+      IamInstanceProfile:
+        Fn::ImportValue:
+          !Sub "${RoleStack}-Ec2InstanceRole"
+      ImageId:
+        Ref: Id
+      InstanceType:
+        Ref: InstanceType
+      DisableApiTermination: true
+      SecurityGroupIds:
+        - !GetAtt
+          - WebServerSecurityGroup
+          - GroupId
+      SubnetId:
+        Ref: SubnetId2
+      Tags:
+        -
+          Key: !Ref EC2TagName
+          Value: !Ref EC2TagValue
+      BlockDeviceMappings:
+        -
+          DeviceName:
+            Ref: DeviceName
+          Ebs:
+            VolumeType:
+              Ref: VolumeType
+            VolumeSize:
+              Ref: VolumeSize
+      UserData:
+        Fn::Base64: !Sub |
+            #! /bin/bash -xe
+            apt-get update
+            echo Y | apt-get install default-jre
+            echo Y | apt-get install default-jdk
+            sed -i '$ a JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"' /etc/environment
+            source /etc/environment
+            wait
+            sleep 3
+            groupadd tomcat
+            useradd -s /bin/false -g tomcat -d /opt/tomcat tomcat
+            cd /opt
+            curl -O http://apache.mirrors.tds.net/tomcat/tomcat-8/v8.5.23/bin/apache-tomcat-8.5.23.tar.gz
+            tar -xvf apache-tomcat-8.5.23.tar.gz
+            mv apache-tomcat-8.5.23 tomcat
+            sleep 3
+            chgrp -R tomcat /opt/tomcat
+            chown -R tomcat /opt/tomcat
+            chmod -R 755 /opt/tomcat
+            echo "[Unit]
+            Description=Apache Tomcat Web Server
+            After=network.target
+            [Service]
+            Type=forking
+            Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid
+            Environment=CATALINA_HOME=/opt/tomcat
+            Environment=CATALINA_BASE=/opt/tomcat
+            Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom'
+            ExecStart=/opt/tomcat/bin/startup.sh
+            ExecStop=/opt/tomcat/bin/shutdown.sh
+            User=tomcat
+            Group=tomcat
+            UMask=0007
+            RestartSec=15
+            Restart=always
+            [Install]
+            WantedBy=multi-user.target" > /etc/systemd/system/tomcat.service
+            systemctl daemon-reload
+            sleep 2
+            systemctl start tomcat
+            sleep 2
+            systemctl enable tomcat
+            sudo ufw allow 8080
+            sleep 10
+            wait
+            apt-get update
+            echo Y | apt-get install ruby
+            apt-get install wget
+            cd /home/ubuntu
+            wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
+            chmod -R 777 /home/ubuntu/install
+            wait
+            sleep 3
+            ./install auto
+            service codedeploy-agent start
+            sleep 10
+            echo '#!/bin/sh' > /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.profiles.active=aws"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.username=${DBUser}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.password=${DBPassword}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_ACCESS_KEY_ID=${IAMAccessKey}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_SERECT_ACCESS_KEY=${IAMSecretKey}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.S3_BUCKET_NAME=${DomainName}.csye6225.com"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_REGION=${AWS::Region}"' >> /opt/tomcat/bin/setenv.sh
+            sleep 3
+            chmod -R 755 /opt/tomcat/bin/setenv.sh
+            chown tomcat:tomcat /opt/tomcat/bin/setenv.sh
+            source /opt/tomcat/bin/setenv.sh
+            sleep 10
+            systemctl restart tomcat
+            apt-get update -y
+            apt-get install python -y
+            curl https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O
+            chmod +x ./awslogs-agent-setup.py
+            echo "[general]
+            state_file = /var/awslogs/state/agent-state
+            [/opt/log/syslog]
+            file = /opt/log/syslog
+            log_group_name = /opt/log/syslog
+            log_stream_name = {instance_id}sys.logs
+            datetime_format = %b %d %H:%M:%S" >> /home/ubuntu/awslogs.conf
+            sleep 3
+            sudo ./awslogs-agent-setup.py -n -r us-east-1 -c awslogs.conf
+            echo "[Unit]
+            Description=Service for CloudWatch Logs agent
+            After=rc-local.service
+            [Service]
+            Type=simple
+            Restart=always
+            KillMode=process
+            TimeoutSec=infinity
+            PIDFile=/var/awslogs/state/awslogs.pid
+            ExecStart=/var/awslogs/bin/awslogs-agent-launcher.sh --start --background --pidfile $PIDFILE --user awslogs --chuid awslogs &amp;
+            [Install]
+            WantedBy=multi-user.target" > /etc/systemd/system/awslogs.service
+            rm -rf /home/ubuntu/awslogs.conf
+            systemctl start awslogs.service
+            systemctl stop awslogs.service
+
+
+  EC2Instance3:
+    Type: 'AWS::EC2::Instance'
+    Properties:
+      KeyName: !Ref KeyName
+      IamInstanceProfile:
+        Fn::ImportValue:
+          !Sub "${RoleStack}-Ec2InstanceRole"
+      ImageId:
+        Ref: Id
+      InstanceType:
+        Ref: InstanceType
+      DisableApiTermination: true
+      SecurityGroupIds:
+        - !GetAtt
+          - WebServerSecurityGroup
+          - GroupId
+      SubnetId:
+        Ref: SubnetId3
+      Tags:
+        -
+          Key: !Ref EC2TagName
+          Value: !Ref EC2TagValue
+      BlockDeviceMappings:
+        -
+          DeviceName:
+            Ref: DeviceName
+          Ebs:
+            VolumeType:
+              Ref: VolumeType
+            VolumeSize:
+              Ref: VolumeSize
+      UserData:
+        Fn::Base64: !Sub |
+            #! /bin/bash -xe
+            apt-get update
+            echo Y | apt-get install default-jre
+            echo Y | apt-get install default-jdk
+            sed -i '$ a JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"' /etc/environment
+            source /etc/environment
+            wait
+            sleep 3
+            groupadd tomcat
+            useradd -s /bin/false -g tomcat -d /opt/tomcat tomcat
+            cd /opt
+            curl -O http://apache.mirrors.tds.net/tomcat/tomcat-8/v8.5.23/bin/apache-tomcat-8.5.23.tar.gz
+            tar -xvf apache-tomcat-8.5.23.tar.gz
+            mv apache-tomcat-8.5.23 tomcat
+            sleep 3
+            chgrp -R tomcat /opt/tomcat
+            chown -R tomcat /opt/tomcat
+            chmod -R 755 /opt/tomcat
+            echo "[Unit]
+            Description=Apache Tomcat Web Server
+            After=network.target
+            [Service]
+            Type=forking
+            Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid
+            Environment=CATALINA_HOME=/opt/tomcat
+            Environment=CATALINA_BASE=/opt/tomcat
+            Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom'
+            ExecStart=/opt/tomcat/bin/startup.sh
+            ExecStop=/opt/tomcat/bin/shutdown.sh
+            User=tomcat
+            Group=tomcat
+            UMask=0007
+            RestartSec=15
+            Restart=always
+            [Install]
+            WantedBy=multi-user.target" > /etc/systemd/system/tomcat.service
+            systemctl daemon-reload
+            sleep 2
+            systemctl start tomcat
+            sleep 2
+            systemctl enable tomcat
+            sudo ufw allow 8080
+            sleep 10
+            wait
+            apt-get update
+            echo Y | apt-get install ruby
+            apt-get install wget
+            cd /home/ubuntu
+            wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
+            chmod -R 777 /home/ubuntu/install
+            wait
+            sleep 3
+            ./install auto
+            service codedeploy-agent start
+            sleep 10
+            echo '#!/bin/sh' > /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.profiles.active=aws"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.username=${DBUser}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Dspring.datasource.password=${DBPassword}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_ACCESS_KEY_ID=${IAMAccessKey}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_SERECT_ACCESS_KEY=${IAMSecretKey}"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.S3_BUCKET_NAME=${DomainName}.csye6225.com"' >> /opt/tomcat/bin/setenv.sh
+            echo 'export JAVA_OPTS="$JAVA_OPTS -Daws.AWS_REGION=${AWS::Region}"' >> /opt/tomcat/bin/setenv.sh
+            sleep 3
+            chmod -R 755 /opt/tomcat/bin/setenv.sh
+            chown tomcat:tomcat /opt/tomcat/bin/setenv.sh
+            source /opt/tomcat/bin/setenv.sh
+            sleep 10
+            systemctl restart tomcat
+            apt-get update -y
+            apt-get install python -y
+            curl https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O
+            chmod +x ./awslogs-agent-setup.py
+            echo "[general]
+            state_file = /var/awslogs/state/agent-state
+            [/opt/log/syslog]
+            file = /opt/log/syslog
+            log_group_name = /opt/log/syslog
+            log_stream_name = {instance_id}sys.logs
+            datetime_format = %b %d %H:%M:%S" >> /home/ubuntu/awslogs.conf
+            sleep 3
+            sudo ./awslogs-agent-setup.py -n -r us-east-1 -c awslogs.conf
+            echo "[Unit]
+            Description=Service for CloudWatch Logs agent
+            After=rc-local.service
+            [Service]
+            Type=simple
+            Restart=always
+            KillMode=process
+            TimeoutSec=infinity
+            PIDFile=/var/awslogs/state/awslogs.pid
+            ExecStart=/var/awslogs/bin/awslogs-agent-launcher.sh --start --background --pidfile $PIDFILE --user awslogs --chuid awslogs &amp;
+            [Install]
+            WantedBy=multi-user.target" > /etc/systemd/system/awslogs.service
+            rm -rf /home/ubuntu/awslogs.conf
+            systemctl start awslogs.service
+            systemctl stop awslogs.service
+
+
+
 # S3 bucket
   S3Bucket:
     Type: AWS::S3::Bucket
@@ -393,17 +670,89 @@ Resources:
         WriteCapacityUnits: !Ref WriteCU
       TableName: !Ref DynamodbTableName
 
+
+#  loadBalancer:
+#   Type: "AWS::ElasticLoadBalancing::LoadBalancer"
+#    Properties:
+#      AvailabilityZones:
+#        - "us-east-1a"
+#      LoadBalancerName: !Ref LoadBalancerName
+#      Listeners:
+#        - LoadBalancerPort: '80'
+#          InstancePort: '80'
+#          Protocol: HTTPS
+
+  LoadBalancer:
+    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
+    Properties:
+      Name: ecs-test-service-loadbalancer
+      Scheme: internet-facing
+      SecurityGroups:
+        - !Ref WebServerSecurityGroup
+      Subnets:
+        - !Ref SubnetId1
+        - !Ref SubnetId2
+        - !Ref SubnetId3
+
+
+  TargetGroup:
+    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
+    Properties:
+      Name: ecs-test-target-group
+      Port: 8080
+      Targets:
+      - Id:
+          Ref: EC2Instance1
+        Port: 8080
+      - Id:
+          Ref: EC2Instance2
+        Port: 8080
+      - Id:
+          Ref: EC2Instance3
+        Port: 8080    
+      Protocol: HTTP
+      VpcId: !Ref VpcId
+
+
+  Listener:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
+    Properties:
+      Certificates:
+        - CertificateArn: !Ref mySSLarn
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref TargetGroup
+      LoadBalancerArn: !Ref LoadBalancer
+      Port: 443
+      Protocol: HTTPS
+
+
   myDNSRecord:
-    Type: AWS::Route53::RecordSet
+    Type: "AWS::Route53::RecordSetGroup"
     Properties:
       HostedZoneId:
         Ref: HostedZoneId
-      Name:
-        Ref: DomainName
-      Type: !Ref DNSRecordType
-      TTL: !Ref DNSTtl
-      ResourceRecords:
-      - !GetAtt EC2Instance.PublicIp
+      Comment: Zone apex targeted to ELB LoadBalancer
+      RecordSets:
+      - Name: !Ref DomainName
+        Type: !Ref DNSRecordType
+        AliasTarget:
+          HostedZoneId: !GetAtt LoadBalancer.CanonicalHostedZoneID
+          DNSName: !GetAtt LoadBalancer.DNSName
+
+          
+#  myDNSRecord:
+#    Type: AWS::Route53::RecordSet
+#    Properties:
+#      HostedZoneId:
+#        Ref: HostedZoneId
+#      Name:
+#        Ref: DomainName
+#      Type: !Ref DNSRecordType
+#      TTL: !Ref DNSTtl
+#      ResourceRecords:
+#      - !GetAtt EC2Instance1.PublicIp
+
 
 Outputs:
   BucketName:
